fixing and adding some dependencies