@@ -38,12 +38,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>20</version>
+            <version>21.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>20</version>
+            <version>21.0.1</version>
         </dependency>
         <dependency>
             <groupId>at.favre.lib</groupId>
@@ -80,6 +80,26 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.22.0</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>4.0.17</version> <!-- Check for the latest version -->
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.0</version> <!-- Use the latest version available -->
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.2</version>
         </dependency>
 
     </dependencies>
@@ -127,6 +147,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.2</version> <!-- Use the version you have -->
+                <configuration>
+                    <argLine>--add-opens javafx.controls/javafx.controls=ALL-UNNAMED --add-opens javafx.graphics/javafx.graphics=ALL-UNNAMED --add-opens javafx.base/javafx.base=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
